@@ -101,28 +101,30 @@ public class ClassUnloadEventTest {
                     Class.forName(CLASS_NAME_PREFIX + index, true, loader);
                 }
             } catch (Exception e) {
-<<<<<<< HEAD
                 throw new RuntimeException("Failed to create Sample class", e);
-=======
-                throw new RuntimeException("Failed to create Sample class");
->>>>>>> 5977ce5adf85c2fb9b1dd62ed250f6d4f05a613c
             }
         }
         loader = null;
-        // Trigger class unloading
-        ClassUnloadCommon.triggerUnloading();
 
-        // Short delay to make sure all ClassUnloadEvents have been sent
-        // before VMDeathEvent is genareated.
+        // Do a short delay to make sure that the debug agent is done processing all
+        // ClassPrepare events. Otherwise the debug agent might still be holding on to
+        // a reference to a class, which will prevent it from unloading during the GC.
         try {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
         }
-<<<<<<< HEAD
+
+        // Trigger class unloading
+        ClassUnloadCommon.triggerUnloading();
+
+        // Do a short delay to make sure all ClassUnloadEvents have been sent
+        // before VMDeathEvent is generated.
+        try {
+            Thread.sleep(5000);
+        } catch (InterruptedException e) {
+        }
 
         System.out.println("Exiting debuggee");
-=======
->>>>>>> 5977ce5adf85c2fb9b1dd62ed250f6d4f05a613c
     }
 
     private static void runDebugger() throws Exception {
@@ -183,7 +185,6 @@ public class ClassUnloadEventTest {
             eventSet.resume();
         }
 
-<<<<<<< HEAD
         /* Dump debuggee output. */
         Process p = vm.process();
         BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
@@ -199,8 +200,6 @@ public class ClassUnloadEventTest {
             line = err.readLine();
         }
 
-=======
->>>>>>> 5977ce5adf85c2fb9b1dd62ed250f6d4f05a613c
         if (unloadedSampleClasses.size() != NUM_CLASSES) {
             throw new RuntimeException("Wrong number of class unload events: expected " + NUM_CLASSES + " got " + unloadedSampleClasses.size());
         }
@@ -215,11 +214,7 @@ public class ClassUnloadEventTest {
         LaunchingConnector launchingConnector = Bootstrap.virtualMachineManager().defaultConnector();
         Map<String, Connector.Argument> arguments = launchingConnector.defaultArguments();
         arguments.get("main").setValue(ClassUnloadEventTest.class.getName());
-<<<<<<< HEAD
         arguments.get("options").setValue("--add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xlog:class+unload=info -Xlog:gc");
-=======
-        arguments.get("options").setValue("--add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI");
->>>>>>> 5977ce5adf85c2fb9b1dd62ed250f6d4f05a613c
         return launchingConnector.launch(arguments);
     }
 }
